--- a/style.css
+++ b/style.css
@@ -1,9 +1,3 @@
-/* h1 {
-    color: green;
-    font-size: 3rem;
+h1{
+font-family: 'Yesteryear', cursive;
 }
-
-h3 {
-    color: brown;
-    font-size: 3rem;
-} */
