--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
 body {
-    font-family: Georgia, 'Times New Roman', Times, serif
+    font-family: 'Courier New', Courier, monospace
+}
+
+* {
+    box-sizing: border-box;
 }
