--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Yesteryear&display=swap');
+
+
 body {
     font-family: 'Yesteryear', cursive;
 }
